--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <div class="navbar fixed-top" style="background-color: #00b0ff">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" style="color: #080808;font-size: xx-large">JDA</a>
+                <a class="navbar-brand" style="color: white;font-size: xx-large">jda</a>
             </div>
         </div>
     </div>
