--- a/templates/carrier_change.html
+++ b/templates/carrier_change.html
@@ -17,7 +17,7 @@
             </div>
             <form action="{{ url_for('show_rate_changes_after_carrier',load_id=values[1], carrier_id=values[2],lane_id=values[0],cost=values[3]) }}" method="post" style="display: inline">
                 <table class="table table-active">
-                    <thead style="background-color: #080808;color: white">
+                    <thead style="background-color: white;color: #00b0ff">
                         <tr>
                             <th scope="col">LANE ID</th>
                             <th scope="col">LOAD ID</th>
