--- a/templates/lanes.html
+++ b/templates/lanes.html
@@ -14,7 +14,7 @@
                 <br>
                 <div id="results">
                     <table class="table table-bordered">
-                    <thead style="background-color: #080808;color: white">
+                    <thead style="background-color: white;color: #00b0ff">
                         <tr>
                             <th>LANE ID</th>
                             <th>Options</th>
