--- a/templates/plan_data.html
+++ b/templates/plan_data.html
@@ -23,7 +23,7 @@
 
                 <div style="top: 120px; height: 800px; overflow: auto;">
                 <table id="plandata" class="table table-active">
-                    <thead style="background-color: #080808;color: white;">
+                    <thead style="background-color: white;color: #00b0ff;">
                         <tr>
                             <th scope="col">Select</th>
                             <th scope="col">LANE ID</th>
