--- a/templates/displaychanges.html
+++ b/templates/displaychanges.html
@@ -17,7 +17,7 @@
                     </div>
                 </div>
                 <table class="table table-active">
-                    <thead style="background-color: #080808;color: white">
+                    <thead style="background-color: white;color: #00b0ff">
                         <tr>
                             <th scope="col">LANE ID</th>
                             <th scope="col">LOAD ID</th>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <table class="table table-active">
-                    <thead style="background-color: #080808;color: white">
+                    <thead style="background-color: white;color: #00b0ff">
                         <tr>
                             <th scope="col">LANE ID</th>
                             <th scope="col">LOAD ID</th>
